# internal/dtos/response.dto.go
@@ -6,3 +6,10 @@ type Response struct {
 	Message string      `json:"message" example:"request berhasil"`
 	Data    interface{} `json:"data,omitempty"`
 }
+
+type ErrResponse struct {
+	Code    int         `json:"code" example:"500"`
+	Success bool        `json:"success" example:"false"`
+	Message string      `json:"message" example:"internal server error"`
+	Data    interface{} `json:"data,omitempty"`
+}
